# rag-fastapi-template

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py  text_splitter.py  vectorstore.py
